<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:id="@+id/dark_theme_switch"
        android:defaultValue="false"
        android:key="dark_theme_switch"
        android:summaryOff="@string/pref_dark_theme_switch_desc_off"
        android:summaryOn="@string/pref_dark_theme_switch_desc"
        android:title="@string/pref_dark_theme_switch_title" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
